--- a/.env.example
+++ b/.env.example
@@ -14,12 +14,12 @@ DB_NAME = db_name
 DB_PORT = 5432
 
 # [Docker Config]
-POSTGRES_USER=shs-user
-POSTGRES_PASSWORD=shs-db-password
-POSTGRES_DB=shs-db
+POSTGRES_USER=flexoo-user
+POSTGRES_PASSWORD=flexoo-db-password
+POSTGRES_DB=flexoo-db
 
 # =========== (JWT SECRET) ===========
-JWT_SECRET = secret
+JWT_SECRET = aknmkdnndckmckmdkmcd
 
 # =========== (MAILER) ===========
 SMTP_HOST=smtp.gmail.com
@@ -27,3 +27,4 @@ SMTP_PORT=587
 SMTP_SENDER_NAME=
 SMTP_AUTH_EMAIL=
 SMTP_AUTH_PASSWORD=
+
