feat: refactor routes to names and update documentation

--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,29 @@
-# =========== (APP) ===========
-APP_HOST=0.0.0.0
-APP_PORT=8880
-APP_MODE=development
-# APP_MODE=production
-# APP_URL=localhost/
+# APP
+APP_PORT=8080
+APP_HOST=localhost
+APP_URL=http://localhost:8080
+APP_MODE=dev # dev or production
 
-# =========== (DATABASE) ===========
-# [LOCAL]
-DB_HOST = localhost
-DB_USER = postgres
-DB_PASS = password
-DB_NAME = db_name
-DB_PORT = 5432
+# DATABASE (Vercel/Supabase style)
+POSTGRES_URL=postgres://user:pass@host:port/dbname?sslmode=require
 
-# [Docker Config]
-POSTGRES_USER=flexoo-user
-POSTGRES_PASSWORD=flexoo-db-password
-POSTGRES_DB=flexoo-db
+# DATABASE (Traditional - fallback)
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASS=password
+DB_NAME=himasakta
+DB_PORT=5432
 
-# =========== (JWT SECRET) ===========
-JWT_SECRET = aknmkdnndckmckmdkmcd
+# AUTH
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
+JWT_SECRET=your_jwt_secret
 
-# =========== (MAILER) ===========
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_SENDER_NAME=
-SMTP_AUTH_EMAIL=
-SMTP_AUTH_PASSWORD=
+# STORAGE (Supabase S3)
+S3_ENDPOINT=https://your-project.supabase.co/storage/v1/s3
+AWS_REGION=ap-southeast-1
+S3_BUCKET=your-bucket
+AWS_ACCESS_KEY=your-access-key
+AWS_SECRET_KEY=your-secret-key
+S3_PUBLIC_URL_PREFIX=https://your-project.supabase.co/storage/v1/object/public/your-bucket/
 
